workloads/arm/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: test-daemonset
  namespace: test-daemonset
spec:
  selector:
    matchLabels:
      k8s-app: test-daemonset
  template:
    metadata:
      labels:
        k8s-app: test-daemonset
    spec:
      containers:
      - name: webserver
        image: rancher/mirrored-library-nginx:1.27.2-alpine
        ports:
        - containerPort: 8080
